--- a/about.html
+++ b/about.html
@@ -35,13 +35,228 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><i class="fa fa-facebook-official fa-lg"></i></a></li>
-            <li><a href="#"><i class="fa fa-instagram fa-lg"></i></a></li>
-            <li><a href="#"><i class="fa fa-bars fa-lg"></i></a></li>
+            <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/" target="_blank"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+            <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
+            <div class="button">
+              <a class="btn-open" href="#"></a>
+            </div>
           </ul>
         </div>
       </div>
     </nav>
+    <!--Kategori-->
+    <div class="overlay">
+    	<div class="container-fluid">
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.github.io/wisata-alam/Hutan-Pinus-Mangunan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(media/gambar/pinus2.jpg);">
+              <div class="desc">
+                <h2>Hutan Pinus Imogiri</h2>
+                <p>Hutan Pinus Mangunan, begitulah bagian dari hutan di kawasan RPH (Resort Pengelolaan Hutan) Mangunan yang ditumbuhi tanaman Pinus merkusii ini disebut...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.github.io/wisata-alam/Kebun-Teh-Nglinggo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(media/gambar/ktn1.JPG);">
+              <div class="desc">
+                <h2>Kebun Teh Nglinggo</h2>
+                <p>Sejarah Desa Wisata Nglinggo tak bisa dipisahkan dari kisah kepahlawanan Pangeran Diponegoro ketika perang melawan Belanda bersama pasukannya di Perbukitan Menoreh...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.github.io/wisata-alam/Goa-Kiskendo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(media/gambar/gk1.jpg);">
+              <div class="desc">
+                <h2>Goa Kiskendo</h2>
+                <p>Gua Kiskendo adalah gua alam di pegunungan Menoreh yang terletak 1200 m di atas permukaan laut.Gua Kiskendo terletak di dusun Sukamaya, Desa Jatimulyo, Kecamatan Girimulyo...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.github.io/wisata-alam/Pantai-Glagah.html" class="desc_ImageOverlay img-responsive" style="background-image: url(media/gambar/pg4.jpg);">
+              <div class="desc">
+                <h2>Pantai Glagah</h2>
+                <p>Pantai Glagah merupakan pantai primadona di Kulonprogo. Destinasi wisata ini hanya berjarak sekitar 40 km arah barat Yogyakarta, berbatasan dengan kabupaten purworejo...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.github.io/wisata-alam/Puncak-Suroloyo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(media/gambar/ps6.jpg);">
+              <div class="desc">
+                <h2>Puncak Suroloyo</h2>
+                <p>Puncak Suroloyo adalah puncak tertinggi di Perbukitan Menoreh, Yogyakarta. Perbukitan yang memiliki ketinggian kurang lebih 2000 meter dpl ini membentang sepanjang Yogyakarta dan Jawa Tengah...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.github.io/wisata-alam/Waduk-Sermo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(media/gambar/ws1.jpg);">
+              <div class="desc">
+                <h2>Waduk Sermo</h2>
+                <p>Waduk Sermo dibangun dengan tujuan untuk suplesi sistem irigasi daerah Kalibawang yang memiliki cakupan areal seluas 7.152 Ha. Bangunan pelimpah...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.github.io/wisata-sejarah/Candi-Barong.html" class="desc_ImageOverlay img-responsive" style="background-image: url(media/gambar/Candi-Barong-1.jpg);">
+              <div class="desc">
+                <h2>Candi Barong</h2>
+                <p>Menurut sejarah, candi yang diperkirakan dibangun antara abad ke-9 dan 10 ini sebenarnya bernama Candi Suragedug. Namun, hiasan kala (sosok raksasa menyeramkan....</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.github.io/wisata-sejarah/Museum-Merapi.html" class="desc_ImageOverlay img-responsive" style="background-image: url(media/gambar/museum-gunung-merapi-1.jpg);">
+              <div class="desc">
+                <h2>Museum Gunung Merapi</h2>
+                <p>Berdiri artistik dengan latar agungnya Gunung Merapi, museum 2 lantai yang diresmikan tahun 2010 silam ini menjadi salah satu tempat wisata menarik di daerah...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.github.io/wisata-sejarah/Candi-Prambanan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(media/gambar/Candi-Prambanan3.jpg);">
+              <div class="desc">
+                <h2>Candi Prambanan</h2>
+                <p>Candi Prambanan adalah bangunan yang dibangun di abad ke-10 pada masa pemerintahan dua raja, Rakai Pikatan dan Rakai Balitung. Menjulang setinggi 47 meter...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="#" class="desc_ImageOverlay img-responsive" style="background-image: url(http://www.imagesource.com/Doc/IS0/Media/Home2/5/8/7/8/IS09AR776.jpg);">
+              <div class="desc">
+                <h2>STRATEGY</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div><!--END Kategori-->
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container text-center">
@@ -104,5 +319,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+          $(".button a").click(function(){
+              $(".overlay").fadeToggle(200);
+             $(this).toggleClass('btn-open').toggleClass('btn-close');
+          });
+        });
+        $('.overlay').on('click', function(){
+          $(".overlay").fadeToggle(200);
+          $(".button a").toggleClass('btn-open').toggleClass('btn-close');
+          open = false;
+        });
+    </script>
+
   </body>
 </html>
