--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
     <link href="css/main.css" rel="stylesheet">
     <!--Load Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -53,8 +48,8 @@
               <h3 class="masthead-brand"><img src="media/gambar/logo.png" width="80px"></h3>
               <nav>
                 <ul class="nav masthead-nav">
-                    <li><a href="#"><i class="fa fa-facebook-official fa-lg"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram fa-lg"></i></a></li>
+                    <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/" target="_blank"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+                    <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
                     <li><a href="#"><i class="fa fa-bars fa-lg"></i></a></li>
                 </ul>
               </nav>
@@ -86,6 +81,19 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script type="text/javascript">
+        $(document).ready(function(){
+          $(".button a").click(function(){
+              $(".overlay").fadeToggle(200);
+             $(this).toggleClass('btn-open').toggleClass('btn-close');
+          });
+        });
+        $('.overlay').on('click', function(){
+          $(".overlay").fadeToggle(200);
+          $(".button a").toggleClass('btn-open').toggleClass('btn-close');
+          open = false;
+        });
+    </script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
