--- a/wisata-alam/Gunung-Nglanggeran.html
+++ b/wisata-alam/Gunung-Nglanggeran.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Memasuki Goa Kiskendo, anda akan disambut dengan keindahan batuan stalaktit dan stalagmite. Goa kiskendo merupakan komplek objek wisata, didalam komplek ini terdapat 15 ruangan dengan berbagai mitos yang berkembang didalamanya.">
+    <meta name="description" content="Hanya memakan waktu 1 hingga 1,5 jam pendakian, Anda akan tiba di puncak barat Gunung Nglanggeran, Gunung Gede. Pemandangan indah yang memanjakan mata pun menyambut.">
     <meta name="author" content="David Rigan, Firdha Puteri Dinda, M.Lukman Hakin, Akhmad Khalid">
     <link rel="icon" href="../media/gambar/icon.ico">
 
-    <title>Goa Kiskendo - Ingarta</title>
+    <title>Pantai Nglanggeran - Ingarta</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
     <!-- Global template main -->
     <link href="../css/main.css" rel="stylesheet">
     <!--Load Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet"> 
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -39,14 +39,12 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                
                 <!--Link Share-->
-                <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Goa-Kiskendo.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+                <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Gunung-Nglanggeran.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
                 <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
                 <div class="button">
                   <a class="btn-open" href="#"></a>
                 </div>
-
               </ul>
             </div>
           </div>
@@ -271,67 +269,28 @@
 
     <!-- Carousel
     ================================================== -->
-     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-caption">
-
-        <!-- Judul Carousel -->
-          <h1>Goa Kiskendo</h1>
-          <div class="stars">
-          <form action="">
-            <input class="star star-5" id="star-5" type="radio" name="star"></input>
-            <label class="star star-5" for="star-5"></label>
-            <input class="star star-4" id="star-4" type="radio" name="star"></input>
-            <label class="star star-4" for="star-4"></label>
-            <input class="star star-3" id="star-3" type="radio" name="star"></input>
-            <label class="star star-3" for="star-3"></label>
-            <input class="star star-2" id="star-2" type="radio" name="star"></input>
-            <label class="star star-2" for="star-2"></label>
-            <input class="star star-1" id="star-1" type="radio" name="star"></input>
-            <label class="star star-1" for="star-1"></label>
-          </form>
-          </div>
+    <div class="container-fluid jarak-padding">
+        <h1 class="nama_tempat">Gunung Nglanggeran</h1>
+        <div class="stars nama_tempat">
+        <form action="">
+              <input class="star star-5" id="star-5" type="radio" name="star"></input>
+              <label class="star star-5" for="star-5"></label>
+              <input class="star star-4" id="star-4" type="radio" name="star"></input>
+              <label class="star star-4" for="star-4"></label>
+              <input class="star star-3" id="star-3" type="radio" name="star"></input>
+              <label class="star star-3" for="star-3"></label>
+              <input class="star star-2" id="star-2" type="radio" name="star"></input>
+              <label class="star star-2" for="star-2"></label>
+              <input class="star star-1" id="star-1" type="radio" name="star"></input>
+              <label class="star star-1" for="star-1"></label>
+            </form>
         </div>
-        <div class="item active">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sid!4v1495208164436!6m8!1m7!1zRjo!2m2!1d-7.846909023900174!2d110.54732507913914!3f232!4f0!5f0.7820865974627469" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
 
-        <!-- Gambar slide 1 -->
-          <img class="first-slide" src="../media/gambar/gk4.jpg" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption"></div>
-          </div>
-        </div>
-        <div class="item">
 
-        <!-- Gambar slide 2 -->
-          <img class="second-slide" src="../media/gambar/gk5.jpg" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption"></div>
-          </div>
-        </div>
-        <div class="item">
+   
 
-        <!-- Gambar slide 3 -->
-          <img class="third-slide" src="../media/gambar/gk3.jpg" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption"></div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div><!-- /.carousel -->
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
@@ -346,11 +305,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Se<span class="text-muted">jarah.</span></h2>
-          <p class="lead">Gua Kiskendo adalah gua alam di pegunungan Menoreh yang terletak 1200 m di atas permukaan laut.Gua Kiskendo terletak di dusun Sukamaya, Desa Jatimulyo, Kecamatan Girimulyo, Kabupaten Kulon Progo Yogyakarta, 35 km Barat Laut dari arah Yogyakarta. Banyak mitos yang masih begitu besar tentang goa Kiskendo yang diyakini warga setempat sebagai tempat keramat. Sejarahnya pada jaman dahulu kala gua ini merupakan kerajaan yang dipimpin oleh rajanya yang bernama Mahesosuro dan Lembusuro yang menurut legenda manusia berkepala kerbau dan sapi.</p>
+          <h2 class="featurette-heading">HI<span class="text-muted">STORY.</span></h2>
+          <p class="lead">Hanya memakan waktu 1 hingga 1,5 jam pendakian, Anda akan tiba di puncak barat Gunung Nglanggeran, Gunung Gede. Pemandangan indah yang memanjakan mata pun menyambut. Sejauh mata memandang yang terlihat hamparan awan di ketinggian, jajaran gunung batu dengan bentuk yang unik, perkampungan warga, serta hijaunya sawah dan ladang. Saat senja menjelang, Kota Jogja akan terlihat laksana lautan kunang-kunang. Taburan cahaya bintang dan gemerlap lampu kota yang terlihat dari kejauhan menjadi pemandangan romantis bagi siapa saja yang berkemah di gunung ini.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/gk1.jpg" alt="500x500" src="../media/gambar/gk1.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/Nglanggeran1.jpg" alt="500x500" src="../media/gambar/Nglanggeran1.jpg" data-holder-rendered="true">
         </div>
       </div>
 
@@ -359,10 +318,11 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Ada apa saja <span class="text-muted">di sana ?</span></h2>
-          <p class="lead">Memasuki Goa Kiskendo, anda akan disambut dengan keindahan batuan stalaktit dan stalagmite. Goa kiskendo merupakan komplek objek wisata, didalam komplek ini terdapat 15 ruangan dengan berbagai mitos yang berkembang didalamanya, mulai dari Lidah Mahesosuro, Pertapaan, Pertapaan santri, Pertapaan Subali yaitu , Sumelong , Lumbuk kampek ,Selumbung, Babat Kendel, Sawaha, dll. Anda bisa melihat alur cerita tentang Gua Kiskendo yang disangkutpautkan dengan kisah Perwayangan Ramayana yang diukir dalam relief didepan mulut goa. Rute-rute umum di gua kiskendo sudah dilengkapi dengan alat penerangan dan alas yang sudah disemen sehingga mempermudah wisatawan untuk menikmati keindahan dalam goa. Untuk para pecinta susur goa, di dalam Goa Kiskendo ada rute panjang sekitar 1,5km untuk melakukan susur gua, pada area ini masih sangat alami tanpa penerangan dan alas ditutup semen.</p>
+          <p class="lead">Gunung Nglanggeran merupakan gunung api purba yang pernah aktif puluhan juta tahun lalu. Terletak di kawasan karst Baturagung, gunung yang litologinya tersusun oleh fragmen material vulkanik tua ini memiliki dua puncak yakni puncak barat dan puncak timur, serta sebuah kaldera ditengahnya. Saat ini Gunung Nglanggeran berupa deretan gunung batu raksasa dengan pemandangan eksotik serta bentuk dan nama yang unik dengan beragam cerita rakyat sebagai pengiringnya. Gunung-gunung tersebut biasanya dinamakan sesuai dengan bentuknya, seperti Gunung 5 Jari, Gunung Kelir, dan Gunung Wayang.
+</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/gk2.jpg" alt="500x5/00" src="../media/gambar/gk2.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/Nglanggeran2.jpg" alt="500x5/00" src="../media/gambar/Nglanggeran2.jpg" data-holder-rendered="true">
         </div>
       </div>
 
@@ -374,30 +334,36 @@
           <p class="lead">
           Fasilitas berupa :
           <ul>
-            <li>Joglo sebagai temoat untuk beristirahat</i></li>
-            <li>Area bermain</li>
-            <li>Bumi perkemahan</li>
-            <li>Gardu pandang</li>
-            <li>Area luas dengan kebersihan yang baik</li>
+            <li>Penginapan & bumi perkemahan</i></li>
+            <li>Kolam renang</li>
+            <li>Gedung pertemuan</li>
+            <li>Outbond</li>
+            <li>Lahan pembelajaran pembibitan dan pembuatan pupuk</li>
+            <li>Aneka buah dan tanaman hias</li>
+            <li>Dll</li>
           </ul>
-          Tiket masuk :   Rp.3.000
+          Tiket masuk :
+          <ul>
+              <li>Buka - tutup  :   08.00 - 18.00</li>
+              <li>Biaya parkir  :   gratis</li>
+              <li>Retribusi pengunjung  :   Rp5.000</li>
+          </ul>
           </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/gk6.jpg" alt="500x500" src="../media/gambar/gk6.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/Nglanggeran3.jpg" alt="500x500" src="../media/gambar/Nglanggeran3.jpg" data-holder-rendered="true">
         </div>
       </div>
 
-      </div>
-      </div>
 
-      <br>
-      <br>
-      <br>
+      
+      </div>
+      </div>
 
       <div class="container-fluid text-center">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.4037305095035!2d110.1286831147778!3d-7.746930294416375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7aee228c144b17%3A0xe7f34278b5d95d90!2sGoa+Kiskendo!5e0!3m2!1sid!2sid!4v1494254938890" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.519669627352!2d110.54281131403758!3d-7.840550280073319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a4e387a29a565%3A0xb84ed0a0fcb97401!2sGunung+Nglanggeran!5e0!3m2!1sen!2sid!4v1495209965209" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>           
       </div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -417,6 +383,5 @@
           open = false;
         });
     </script>
-
   </body>
 </html>
