--- a/wisata-alam/Kebun-Teh-Nglinggo.html
+++ b/wisata-alam/Kebun-Teh-Nglinggo.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="About our team behind Ingarta.">
-    <meta name="author" content="David Rigan, Firhda Puteri Dinda, M.Lukman Hakin, Akhmad Khalid">
+    <meta name="description" content="Pengunjung yang datang di wisata kebun teh ini dapat menikmati keindahan alam perbukitan menoreh serta pengunjung dapat melihat petani teh memetik daun teh saat musim panen tiba.">
+    <meta name="author" content="David Rigan, Firdha Puteri Dinda, M.Lukman Hakin, Akhmad Khalid">
     <link rel="icon" href="../media/gambar/icon.ico">
 
     <title>Kebun Teh Nglinggo - Ingarta</title>
@@ -38,13 +38,230 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="facebook"><i class="fa fa-facebook-square fa-lg"></i></a></li>
-                <li><a href="#instagram"><i class="fa fa-instagram fa-lg"></i></a></li>
-                <li><a href="#"><i class="fa fa-bars fa-lg"></i></a></li>
+                <!--Link Share-->
+                <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Kebun-Teh-Nglinggo.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+                <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
+                <div class="button">
+                  <a class="btn-open" href="#"></a>
+                </div>
               </ul>
             </div>
           </div>
       </div>
+
+      <!--Kategori-->
+    <div class="overlay">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Kebun-Buah-Mangunan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/mang1.jpg);">
+              <div class="desc">
+                <h2>Hutan Pinus Imogiri</h2>
+                <p>Hutan Pinus Mangunan, begitulah bagian dari hutan di kawasan RPH (Resort Pengelolaan Hutan) Mangunan yang ditumbuhi tanaman Pinus merkusii ini disebut...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Kebun-Teh-Nglinggo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/ktn1.JPG);">
+              <div class="desc">
+                <h2>Kebun Teh Nglinggo</h2>
+                <p>Sejarah Desa Wisata Nglinggo tak bisa dipisahkan dari kisah kepahlawanan Pangeran Diponegoro ketika perang melawan Belanda bersama pasukannya di Perbukitan Menoreh...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Goa-Kiskendo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/gk1.jpg);">
+              <div class="desc">
+                <h2>Goa Kiskendo</h2>
+                <p>Gua Kiskendo adalah gua alam di pegunungan Menoreh yang terletak 1200 m di atas permukaan laut.Gua Kiskendo terletak di dusun Sukamaya, Desa Jatimulyo, Kecamatan Girimulyo...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Pantai-Glagah.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/pg4.jpg);">
+              <div class="desc">
+                <h2>Pantai Glagah</h2>
+                <p>Pantai Glagah merupakan pantai primadona di Kulonprogo. Destinasi wisata ini hanya berjarak sekitar 40 km arah barat Yogyakarta, berbatasan dengan kabupaten purworejo...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Puncak-Suroloyo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/ps6.jpg);">
+              <div class="desc">
+                <h2>Puncak Suroloyo</h2>
+                <p>Puncak Suroloyo adalah puncak tertinggi di Perbukitan Menoreh, Yogyakarta. Perbukitan yang memiliki ketinggian kurang lebih 2000 meter dpl ini membentang sepanjang Yogyakarta dan Jawa Tengah...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Waduk-Sermo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/ws1.jpg);">
+              <div class="desc">
+                <h2>Waduk Sermo</h2>
+                <p>Waduk Sermo dibangun dengan tujuan untuk suplesi sistem irigasi daerah Kalibawang yang memiliki cakupan areal seluas 7.152 Ha. Bangunan pelimpah...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Candi-Barong.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Candi-Barong-1.jpg);">
+              <div class="desc">
+                <h2>Candi Barong</h2>
+                <p>Menurut sejarah, candi yang diperkirakan dibangun antara abad ke-9 dan 10 ini sebenarnya bernama Candi Suragedug. Namun, hiasan kala (sosok raksasa menyeramkan....</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Museum-Merapi.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/museum-gunung-merapi-1.jpg);">
+              <div class="desc">
+                <h2>Museum Gunung Merapi</h2>
+                <p>Berdiri artistik dengan latar agungnya Gunung Merapi, museum 2 lantai yang diresmikan tahun 2010 silam ini menjadi salah satu tempat wisata menarik di daerah...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Candi-Prambanan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Candi-Prambanan3.jpg);">
+              <div class="desc">
+                <h2>Candi Prambanan</h2>
+                <p>Candi Prambanan adalah bangunan yang dibangun di abad ke-10 pada masa pemerintahan dua raja, Rakai Pikatan dan Rakai Balitung. Menjulang setinggi 47 meter...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Goa-Japan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Goa-Jepang3.jpg);">
+              <div class="desc">
+                <h2>Goa Jepang</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Monjali.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Monjali1.jpg);">
+              <div class="desc">
+                <h2>Monjali</h2>
+                <p>Museum Monumen Yogya Kembali, adalah sebuah museum sejarah perjuangan kemerdekaan Republik Indonesia yang ada di kota Yogyakarta dan dikelola oleh Departemen Kebudayaan dan Pariwisata...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Keraton-Yogyakarta.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/keraton1.jpg);">
+              <div class="desc">
+                <h2>Keraton Yogyakarta</h2>
+                <p>Kraton Kasultanan Ngayogyakarta Hadiningrat atau yang sekarang lebih dikenal dengan nama Kraton Yogyakarta merupakan pusat dari museum hidup kebudayaan Jawa yang ada di Daerah Istimewa Yogyakarta...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Malioboro.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/malio1.jpg);">
+              <div class="desc">
+                <h2>Malioboro</h2>
+                <p>Sebelum berubah menjadi jalanan yang ramai, Malioboro hanyalah ruas jalan yang sepi dengan pohon asam tumbuh di kanan dan kirinya. Jalan ini hanya dilewati oleh masyarakat...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-budaya/Kebun-Binatang-Gembira-Loka.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/zoo1.jpg);">
+              <div class="desc">
+                <h2>Gembira Loka Zoo</h2>
+                <p>Kebun binatang yang berdiri sejak puluhan tahun lalu ini rupanya memiliki belasan koleksi komodo yang tersebar di beberapa kandang. Bahkan, pada periode tahun 1992 hingga 1996...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="ingarta.id/wisata-sejarah/Taman-Pintar.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/taman1.jpg);">
+              <div class="desc">
+                <h2>Taman Pintar</h2>
+                <p>Taman Pintar adalah wahana wisata yang terdapat di pusat Kota Yogyakarta, tepatnya di Jalan Panembahan Senopati No. 1-3, Yogyakarta, di kawasan Benteng Vredeburg...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Puncak-Kasakora.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/puncak-kosakora1.jpg);">
+              <div class="desc">
+                <h2>Puncak Kasakora</h2>
+                <p>Puncak Kosakora adalah hasil fenomena eksokarst lain di Gunungkidul. Sebuah bukit karst yang berada dalam satu garis dengan deretan pantai-pantai cantik Gunungkidul...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Pantai-Ndrini.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/pantai-drini1.jpg);">
+              <div class="desc">
+                <h2>Pantai Ndrini</h2>
+                <p>Pantai Drini menjadi salah satu pantai istimewa di pesisir Gunungkidul karena sebuah pulau kecil di tengahnya, membagi pantai menjadi dua bagian...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Gunung-Nglanggeran.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Nglanggeran1.jpg);">
+              <div class="desc">
+                <h2>Pantai Nglanggeran</h2>
+                <p>Hanya memakan waktu 1 hingga 1,5 jam pendakian, Anda akan tiba di puncak barat Gunung Nglanggeran, Gunung Gede. Pemandangan indah yang memanjakan mata pun menyambut...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Goa-Rancang-Kencono.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/goark1.jpg);">
+              <div class="desc">
+                <h2>Goa Rancang Kencono</h2>
+                <p>Gua Rancang Kencono yang terletak di Desa Wisata Bleberan. Untuk memasuki Gua Rancang Kencono cukup menuruni tangga batu yang sudah dibangun sejak dulu...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Embung-Batara-Sriten.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/embung1.jpg);">
+              <div class="desc">
+                <h2>Embung Batara Sinten</h2>
+                <p>Jalanan menanjak dan berliku-liku menuju Pegunungan Baturagung Utara membuat tak henti-hentinya menahan nafas tegang. Berlanjut dengan jalanan berbatu kapur kurang lebih...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Air-Terjun-Lepo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/lepo1.jpg);">
+              <div class="desc">
+                <h2>Air Terjun Lepo</h2>
+                <p>Air Terjun Lepo memiliki kolam alami yang masing-masing memiliki kedalaman yang beragam. Kolam pertama yang kami lihat ketika sampai tempat wisata ini kedalamannya mencapai 2 meter...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Hutan-Pinus-Mangunan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/pinus1.jpg);">
+              <div class="desc">
+                <h2>Hutan Pinus Mangunan</h2>
+                <p>Hutan Pinus Mangunan, begitulah sebutan untuk bagian dari hutan di kawasan RPH (Resort Pengelolaan Hutan) Mangunan yang ditumbuhi tanaman Pinus merkusi. Lokasinya...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Pantai-Parangtritis.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/parang1.jpg);">
+              <div class="desc">
+                <h2>Pantai Parangtritis</h2>
+                <p>Pantai Parangtritis terletak 27 km selatan Kota Jogja dan mudah dicapai dengan transportasi umum yang beroperasi hingga pukul 17.00 maupun kendaraan pribadi...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Sendang-Ngembel.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/sendang1.jpg);">
+              <div class="desc">
+                <h2>Sendang Ngembel</h2>
+                <p>Sendang Ngembel secara administratif terletak di Dusun Beji Wetan, Desa Sendangsari, Kec. Pajangan, Kabupaten Bantul. Obyek wisata ini tergolong kecil dan tidak terlalu luas...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div><!--END Kategori-->
 
     <!-- Carousel
     ================================================== -->
@@ -72,7 +289,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Se<span class="text-muted">jarah.</span></h2>
-          <p class="lead">Sejarah Desa Wisata Nglinggo tak bisa dipisahkan dari kisah kepahlawanan Pangeran Diponegoro ketika perang melawan Belanda bersama pasukannya di Perbukitan Menoreh. Menurut cerita turun temurun yang dipercaya masyarakat setempat, dahulu ada tiga orang prajurit pengikut Pangeran Diponegoro yang menyusun strategi tak jauh dari kawasan Desa Nglinggo. Tiga prajurit tersebut adalah Ki Linggo Manik, Ki Dalem Tanu, dan Ki Gagak Roban. Untuk mengenang para prajurit tersebut, akhirnya nama Ki Linggo Manik yang dianggap sebagai pemimpin, diabadikan menjadi nama sebuah desa yang kini telah menjelma menjadi kawasan wisata dengan pemandangan menawan. Salah satu pemandangan itu bisa kita saksikan di kawasan kebun teh, di ujung barat pedukuhan Nglinggo yang kemudian lebih populer disebut Kebun Teh Nglinggo.</p>
+          <p class="lead">Desa Wisata Nglinggo tak bisa dipisahkan dari kisah kepahlawanan Pangeran Diponegoro ketika perang melawan Belanda bersama pasukannya di Perbukitan Menoreh. Menurut cerita turun temurun yang dipercaya masyarakat setempat, dahulu ada tiga orang prajurit pengikut Pangeran Diponegoro yang menyusun strategi tak jauh dari kawasan Desa Nglinggo. Tiga prajurit tersebut adalah Ki Linggo Manik, Ki Dalem Tanu, dan Ki Gagak Roban. Untuk mengenang para prajurit tersebut, akhirnya nama Ki Linggo Manik yang dianggap sebagai pemimpin, diabadikan menjadi nama sebuah desa yang kini telah menjelma menjadi kawasan wisata dengan pemandangan menawan. Salah satu pemandangan itu bisa kita saksikan di kawasan kebun teh, di ujung barat pedukuhan Nglinggo yang kemudian lebih populer disebut Kebun Teh Nglinggo.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" data-src="../media/gambar/ktn1.JPG" alt="500x500" src="../media/gambar/ktn1.JPG" data-holder-rendered="true">
@@ -112,7 +329,10 @@
       </div>
     </div>
 
-      <hr class="featurette-divider">
+     <br>
+      <br>
+      <br>
+      
 
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.335233473448!2d110.1392812147771!3d-7.647053994486646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7af2aa21b914df%3A0x99633b0e828534dc!2sKebun+Teh+Nglinggo!5e0!3m2!1sid!2sid!4v1494252477421" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -123,5 +343,18 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+          $(".button a").click(function(){
+              $(".overlay").fadeToggle(200);
+             $(this).toggleClass('btn-open').toggleClass('btn-close');
+          });
+        });
+        $('.overlay').on('click', function(){
+          $(".overlay").fadeToggle(200);
+          $(".button a").toggleClass('btn-open').toggleClass('btn-close');
+          open = false;
+        });
+    </script>
   </body>
 </html>
