--- a/wisata-alam/Puncak-Suroloyo.html
+++ b/wisata-alam/Puncak-Suroloyo.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Puncak Suroloyo adalah puncak tertinggi di Perbukitan Menoreh, Yogyakarta. Perbukitan yang memiliki ketinggian kurang lebih 2000 meter dpl ini membentang sepanjang Yogyakarta dan Jawa Tengah">
+    <meta name="author" content="David Rigan, Firdha Puteri Dinda, M.Lukman Hakin, Akhmad Khalid">
     <link rel="icon" href="../media/gambar/icon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Puncak Suroloyo - Ingarta</title>
 
   <!-- Memanggil bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -56,15 +56,232 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="facebook"><i class="fa fa-facebook-square fa-lg"></i></a></li>
-                <li><a href="#instagram"><i class="fa fa-instagram fa-lg"></i></a></li>
-                <li><a href="#close"><i class="fa fa-close (alias) fa-lg"></i></a></li>
+                <!--Link Share-->
+                <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Puncak-Suroloyo.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+                <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
+                <div class="button">
+                  <a class="btn-open" href="#"></a>
+                </div>
               </ul>
             </div>
           </div>
 
       </div>
     </div>
+
+     <!--Kategori-->
+    <div class="overlay">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Kebun-Buah-Mangunan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/mang1.jpg);">
+              <div class="desc">
+                <h2>Hutan Pinus Imogiri</h2>
+                <p>Hutan Pinus Mangunan, begitulah bagian dari hutan di kawasan RPH (Resort Pengelolaan Hutan) Mangunan yang ditumbuhi tanaman Pinus merkusii ini disebut...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Kebun-Teh-Nglinggo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/ktn1.JPG);">
+              <div class="desc">
+                <h2>Kebun Teh Nglinggo</h2>
+                <p>Sejarah Desa Wisata Nglinggo tak bisa dipisahkan dari kisah kepahlawanan Pangeran Diponegoro ketika perang melawan Belanda bersama pasukannya di Perbukitan Menoreh...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Goa-Kiskendo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/gk1.jpg);">
+              <div class="desc">
+                <h2>Goa Kiskendo</h2>
+                <p>Gua Kiskendo adalah gua alam di pegunungan Menoreh yang terletak 1200 m di atas permukaan laut.Gua Kiskendo terletak di dusun Sukamaya, Desa Jatimulyo, Kecamatan Girimulyo...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Pantai-Glagah.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/pg4.jpg);">
+              <div class="desc">
+                <h2>Pantai Glagah</h2>
+                <p>Pantai Glagah merupakan pantai primadona di Kulonprogo. Destinasi wisata ini hanya berjarak sekitar 40 km arah barat Yogyakarta, berbatasan dengan kabupaten purworejo...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Puncak-Suroloyo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/ps6.jpg);">
+              <div class="desc">
+                <h2>Puncak Suroloyo</h2>
+                <p>Puncak Suroloyo adalah puncak tertinggi di Perbukitan Menoreh, Yogyakarta. Perbukitan yang memiliki ketinggian kurang lebih 2000 meter dpl ini membentang sepanjang Yogyakarta dan Jawa Tengah...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Waduk-Sermo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/ws1.jpg);">
+              <div class="desc">
+                <h2>Waduk Sermo</h2>
+                <p>Waduk Sermo dibangun dengan tujuan untuk suplesi sistem irigasi daerah Kalibawang yang memiliki cakupan areal seluas 7.152 Ha. Bangunan pelimpah...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Candi-Barong.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Candi-Barong-1.jpg);">
+              <div class="desc">
+                <h2>Candi Barong</h2>
+                <p>Menurut sejarah, candi yang diperkirakan dibangun antara abad ke-9 dan 10 ini sebenarnya bernama Candi Suragedug. Namun, hiasan kala (sosok raksasa menyeramkan....</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Museum-Merapi.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/museum-gunung-merapi-1.jpg);">
+              <div class="desc">
+                <h2>Museum Gunung Merapi</h2>
+                <p>Berdiri artistik dengan latar agungnya Gunung Merapi, museum 2 lantai yang diresmikan tahun 2010 silam ini menjadi salah satu tempat wisata menarik di daerah...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Candi-Prambanan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Candi-Prambanan3.jpg);">
+              <div class="desc">
+                <h2>Candi Prambanan</h2>
+                <p>Candi Prambanan adalah bangunan yang dibangun di abad ke-10 pada masa pemerintahan dua raja, Rakai Pikatan dan Rakai Balitung. Menjulang setinggi 47 meter...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Goa-Japan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Goa-Jepang3.jpg);">
+              <div class="desc">
+                <h2>Goa Jepang</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Monjali.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Monjali1.jpg);">
+              <div class="desc">
+                <h2>Monjali</h2>
+                <p>Museum Monumen Yogya Kembali, adalah sebuah museum sejarah perjuangan kemerdekaan Republik Indonesia yang ada di kota Yogyakarta dan dikelola oleh Departemen Kebudayaan dan Pariwisata...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Keraton-Yogyakarta.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/keraton1.jpg);">
+              <div class="desc">
+                <h2>Keraton Yogyakarta</h2>
+                <p>Kraton Kasultanan Ngayogyakarta Hadiningrat atau yang sekarang lebih dikenal dengan nama Kraton Yogyakarta merupakan pusat dari museum hidup kebudayaan Jawa yang ada di Daerah Istimewa Yogyakarta...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Malioboro.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/malio1.jpg);">
+              <div class="desc">
+                <h2>Malioboro</h2>
+                <p>Sebelum berubah menjadi jalanan yang ramai, Malioboro hanyalah ruas jalan yang sepi dengan pohon asam tumbuh di kanan dan kirinya. Jalan ini hanya dilewati oleh masyarakat...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-budaya/Kebun-Binatang-Gembira-Loka.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/zoo1.jpg);">
+              <div class="desc">
+                <h2>Gembira Loka Zoo</h2>
+                <p>Kebun binatang yang berdiri sejak puluhan tahun lalu ini rupanya memiliki belasan koleksi komodo yang tersebar di beberapa kandang. Bahkan, pada periode tahun 1992 hingga 1996...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="ingarta.id/wisata-sejarah/Taman-Pintar.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/taman1.jpg);">
+              <div class="desc">
+                <h2>Taman Pintar</h2>
+                <p>Taman Pintar adalah wahana wisata yang terdapat di pusat Kota Yogyakarta, tepatnya di Jalan Panembahan Senopati No. 1-3, Yogyakarta, di kawasan Benteng Vredeburg...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Puncak-Kasakora.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/puncak-kosakora1.jpg);">
+              <div class="desc">
+                <h2>Puncak Kasakora</h2>
+                <p>Puncak Kosakora adalah hasil fenomena eksokarst lain di Gunungkidul. Sebuah bukit karst yang berada dalam satu garis dengan deretan pantai-pantai cantik Gunungkidul...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Pantai-Ndrini.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/pantai-drini1.jpg);">
+              <div class="desc">
+                <h2>Pantai Ndrini</h2>
+                <p>Pantai Drini menjadi salah satu pantai istimewa di pesisir Gunungkidul karena sebuah pulau kecil di tengahnya, membagi pantai menjadi dua bagian...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Gunung-Nglanggeran.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Nglanggeran1.jpg);">
+              <div class="desc">
+                <h2>Pantai Nglanggeran</h2>
+                <p>Hanya memakan waktu 1 hingga 1,5 jam pendakian, Anda akan tiba di puncak barat Gunung Nglanggeran, Gunung Gede. Pemandangan indah yang memanjakan mata pun menyambut...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Goa-Rancang-Kencono.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/goark1.jpg);">
+              <div class="desc">
+                <h2>Goa Rancang Kencono</h2>
+                <p>Gua Rancang Kencono yang terletak di Desa Wisata Bleberan. Untuk memasuki Gua Rancang Kencono cukup menuruni tangga batu yang sudah dibangun sejak dulu...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Embung-Batara-Sriten.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/embung1.jpg);">
+              <div class="desc">
+                <h2>Embung Batara Sinten</h2>
+                <p>Jalanan menanjak dan berliku-liku menuju Pegunungan Baturagung Utara membuat tak henti-hentinya menahan nafas tegang. Berlanjut dengan jalanan berbatu kapur kurang lebih...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Air-Terjun-Lepo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/lepo1.jpg);">
+              <div class="desc">
+                <h2>Air Terjun Lepo</h2>
+                <p>Air Terjun Lepo memiliki kolam alami yang masing-masing memiliki kedalaman yang beragam. Kolam pertama yang kami lihat ketika sampai tempat wisata ini kedalamannya mencapai 2 meter...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Hutan-Pinus-Mangunan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/pinus1.jpg);">
+              <div class="desc">
+                <h2>Hutan Pinus Mangunan</h2>
+                <p>Hutan Pinus Mangunan, begitulah sebutan untuk bagian dari hutan di kawasan RPH (Resort Pengelolaan Hutan) Mangunan yang ditumbuhi tanaman Pinus merkusi. Lokasinya...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Pantai-Parangtritis.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/parang1.jpg);">
+              <div class="desc">
+                <h2>Pantai Parangtritis</h2>
+                <p>Pantai Parangtritis terletak 27 km selatan Kota Jogja dan mudah dicapai dengan transportasi umum yang beroperasi hingga pukul 17.00 maupun kendaraan pribadi...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Sendang-Ngembel.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/sendang1.jpg);">
+              <div class="desc">
+                <h2>Sendang Ngembel</h2>
+                <p>Sendang Ngembel secara administratif terletak di Dusun Beji Wetan, Desa Sendangsari, Kec. Pajangan, Kabupaten Bantul. Obyek wisata ini tergolong kecil dan tidak terlalu luas...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div><!--END Kategori-->
 
 
     <!-- Carousel
@@ -152,7 +369,7 @@
           </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/ps6.jpg" alt="500x500" src="../media/gambar/ps6.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/ps1.jpg" alt="500x500" src="../media/gambar/ps1.jpg" data-holder-rendered="true">
         </div>
       </div>
 
@@ -161,11 +378,11 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Ada apa saja <span class="text-muted">di sana ?</span></h2>
-          <p class="lead">Ada tiga pendopo di Puncak Suroloyo. Pendopo pertama ialah Pertapaan Suroloyo. Lokasinya Pertapaan Suroloyo berada di paling bawah dibandingkan dengan dua pendopo lainnya. Dari sini wisatawan dapat melihat Candi Borobudur. Pendopo kedua bernama Pertapaan Sariloyo yang terletak 200 meter ke arah barat. Dari Pertapaan Sariloyo, wisatawan bisa memandang Gunung Sumbing dan Gunung Sindoro. Untuk mencapai pendopo ketiga, wisatawan harus naik tangga sekitar 200 meter lagi. Pendopo ini diberi nama Pertapaan Kaendran. Dari tempat ini secara samar-samar akan terlihat warna biru berbatas dengan abu-abu yang merupakan Pantai Glagah di Kulonprogo. Semua pertapaan ini berada dalam satu area berdekatan di kawasan Puncak Suroloyo. Puncak Suroloyo merupakan satu titik temu antara empat gunung, yakni: Merapi, Sindoro, Sumbing dan Merbabu.
+          <p class="lead">Ada tiga pendopo di Puncak Suroloyo. Pendopo pertama ialah Pertapaan Suroloyo yang berlokasi paling bawah dibandingkan dengan dua pendopo lainnya. Dari sini wisatawan dapat melihat Candi Borobudur. Pendopo kedua ialah Pertapaan Sariloyo yang terletak 200 meter ke arah barat. Dari sini wisatawan bisa memandang Gunung Sumbing & Gunung Sindoro. Pendopo ketiga ialah Pertapaan Kaendran. Dari tempat ini secara samar-samar akan terlihat warna biru berbatas dengan abu-abu yang merupakan Pantai Glagah di Kulonprogo. Semua pertapaan ini berada dalam satu area berdekatan di kawasan Puncak Suroloyo. Puncak Suroloyo merupakan satu titik temu antara empat gunung, yakni: Merapi, Sindoro, Sumbing dan Merbabu.
           </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/ps1.jpg" alt="500x5/00" src="../media/gambar/ps1.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/ps6.jpg" alt="500x5/00" src="../media/gambar/ps6.jpg" data-holder-rendered="true">
         </div>
       </div>
 
@@ -193,7 +410,10 @@
       </div>
       </div>
 
-      <hr class="featurette-divider">
+      <br>
+      <br>
+      <br>
+      
 
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.3404067267998!2d110.17882751477728!3d-7.646495694487041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7af2d144fd0c11%3A0xb15fc2d3a87b7512!2sPuncak+Suroloyo!5e0!3m2!1sid!2sid!4v1494257498299" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>        
@@ -238,5 +458,20 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+
+    <!--Fungsi buat togel menu-->
+    <script type="text/javascript">
+        $(document).ready(function(){
+          $(".button a").click(function(){
+              $(".overlay").fadeToggle(200);
+             $(this).toggleClass('btn-open').toggleClass('btn-close');
+          });
+        });
+        $('.overlay').on('click', function(){
+          $(".overlay").fadeToggle(200);
+          $(".button a").toggleClass('btn-open').toggleClass('btn-close');
+          open = false;
+        });
+    </script>
   </body>
 </html>
