--- a/wisata-budaya/Kebun-Binatang-Gembira-Loka.html
+++ b/wisata-budaya/Kebun-Binatang-Gembira-Loka.html
@@ -70,7 +70,8 @@
               <label class="star star-1" for="star-1"></label>
             </form>
         </div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sid!2sid!4v1494128963337!6m8!1m7!1sF%3A-lfqi0U9Ss5k%2FV_mi5nuO_4I%2FAAAAAAAAEiU%2FqE0WlikU9_cGlGIkSGUnpFAEsvU3Ut8uQCLIB!2m2!1d-7.924999106507626!2d110.4323403012826!3f304!4f0!5f0.7820865974627469" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sid!2sid!4v1495439000599!6m8!1m7!1sF%3A-ikyNROEHN7c%2FV8ezOqq2BfI%2FAAAAAAAAAUs%2F-8xd1-cvuxcrXERXqrR3_8at9xm1fLcKwCJkC!2m2!1d-7.807688799999998!2d110.3953743!3f135.4213735586994!4f-1.6624475538567935!5f0.4000000000000002" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
     </div>
 
     <!-- Marketing messaging and featurettes
@@ -86,7 +87,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">HI<span class="text-muted">STORY.</span></h2>
+          <h2 class="featurette-heading">Se<span class="text-muted">jarah.</span></h2>
           <p class="lead">Kebun binatang yang berdiri sejak puluhan tahun lalu ini rupanya memiliki belasan koleksi komodo yang tersebar di beberapa kandang. Bahkan, pada periode tahun 1992 hingga 1996, Gembira Loka juga menjadi tempat penangkaran komodo ex situ (di luar habitat aslinya) yang paling berhasil sehingga mendapatkan penghargaan pada Konferensi Komodo Dragon tahun 1998 di Thoiry, Paris.</p>
         </div>
         <div class="col-md-5">
@@ -118,24 +119,16 @@
             <li>dari Kota Jogja - Jl. Imogiri Timur - Imogiri - pertigaan Imogiri belok kiri ke arah Makam Raja-raja Imogiri - pertigaan belok kanan ke arah Mangunan - pertigaan Mangunan belok kiri ke arah hutan pinus - Hutan Pinus Mangunan</i></li></ul> -->
           Tiket masuk :
           <ul>
-            <li>Rp 20.000 (Senin - Jumat)</li>
-            <li>Rp 25.000 (Sabtu, Minggu / hari libur)</li>
-            <li>Buka Setiap Hari Pk 08:00 - 16:00 WIB</li>
+            <li>Rp20.000 (Senin-Jumat) / Rp25.000 (Sabtu, Minggu/Hari Libur)</li>
+            <li>Buka Setiap Hari Pukul 08.00-16.00 WIB</li>
           </ul>
           Tiket Wahana :
           <ul>
-            <li> Skuter air, ATV, perahu senggol, perahu boat, perahu banana "Orca", terapi ikan: Rp 20.000</li>
-            <li> Perahu kayuh: Rp 15.000</li>
+            <li> Skuter air, ATV, perahu senggol, perahu boat, perahu banana "Orca", terapi ikan, perahu kayuh
             <li> Kapal kataraman, gajah tunggang, onta tunggang, kolam tangkap: Rp 10.000</li>
             <li> Kano engkol, kereta mini: Rp 5.000</li>
           </ul>
-          Keterangan :
-          <ul>
-            <li> Rombongan dengan jumlah minimal 25 orang akan mendapatkan potongan jika telah memberitahukan rencana kunjungan sejak jauh-jauh hari</li>
-            <li> Pertunjukkan satwa lucu dilangsungkan setiap hari pada pukul 11.00 dan 13.00 WIB, sedangkan pada hari libur tergantung dari animo pengunjung.</li>
-            <li> Kebun Raya Kebun Binatang Gembira Loka dapat dicapai menggunakan Trans Jogja. Dari Halte Malioboro Anda dapat naik jalur 1A, sedangkan dari Halte Bandara Adisutjipto silahkan naik Trans Jogja jalur 1B.</li>
-          </ul>
-          </p>
+                    </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" data-src="../media/gambar/zoo3.jpg" alt="500x500" src="../media/gambar/zoo3.jpg" data-holder-rendered="true">
@@ -144,6 +137,10 @@
 
       </div>
       </div>
+
+      <br>
+      <br>
+      <br>
 
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.87694012447!2d110.39556521429573!3d-7.802850579620074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a576ee82ea301%3A0x6a2223f1f382914b!2sGembira+Loka+Zoo!5e0!3m2!1sid!2sid!4v1495252223874" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
