--- a/wisata-sejarah/Candi-Barong.html
+++ b/wisata-sejarah/Candi-Barong.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="candi yang diperkirakan dibangun antara abad ke-9 dan 10 ini sebenarnya bernama Candi Suragedug. Namun, hiasan kala (sosok raksasa menyeramkan yang biasanya menghias gerbang atau pintu masuk candi) berbentuk barong di tiap sisi bangunan candi yang begitu khas membuat masyarakat sekitar lebih senang menjulukinya Candi Barong.">
-    <meta name="author" content="David Rigan, Firhda Puteri Dinda, M.Lukman Hakin, Akhmad Khalid">
+    <meta name="author" content="David Rigan, Firdha Puteri Dinda, M.Lukman Hakin, Akhmad Khalid">
     <link rel="icon" href="../media/gambar/icon.ico">
 
     <title>Candi Barong - Ingarta</title>
@@ -84,8 +84,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">HI<span class="text-muted">STORY.</span></h2>
-          <p class="lead">Menurut sejarah, candi yang diperkirakan dibangun antara abad ke-9 dan 10 ini sebenarnya bernama Candi Suragedug. Namun, hiasan kala (sosok raksasa menyeramkan yang biasanya menghias gerbang atau pintu masuk candi) berbentuk barong di tiap sisi bangunan candi yang begitu khas membuat masyarakat sekitar lebih senang menjulukinya Candi Barong. Kala-kala barong di candi ini dalam mitologi Hindu dipercaya sebagai makhluk penjaga kesucian bangunan. Alih-alih menyeramkan seperti kala pada bangunan lainnya, barong-barong ini malah terkesan memberikan senyumannya. Selain barong, ornamen unik lain yang menghias candi ini adalah Ghana, si raksasa kerdil yang menopang relung candi.</p>
+          <h2 class="featurette-heading">Se<span class="text-muted">jarah.</span></h2>
+          <p class="lead">Candi yang diperkirakan dibangun antara abad ke-9 ini sebenarnya bernama Candi Suragedug. Namun, hiasan kala (sosok raksasa menyeramkan yang biasanya menghias gerbang atau pintu masuk candi) berbentuk barong di tiap sisi bangunan candi yang begitu khas membuat masyarakat sekitar lebih senang menjulukinya Candi Barong. Kala-kala barong di candi ini dalam mitologi Hindu dipercaya sebagai makhluk penjaga kesucian bangunan. Alih-alih menyeramkan seperti kala pada bangunan lainnya, barong-barong ini malah terkesan memberikan senyumannya. Selain barong, ornamen unik lain yang menghias candi ini adalah Ghana, si raksasa kerdil yang menopang relung candi.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" data-src="../media/gambar/Candi-Barong-1.jpg" alt="500x500" src="../media/gambar/Candi-Barong-1.jpg" data-holder-rendered="true">
@@ -137,6 +137,11 @@
 
       </div>
       </div>
+
+      <br>
+      <br>
+      <br>
+      
 
       <div class="container-fluid text-center">
        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.132985151968!2d110.4976501!3d-7.7757206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5ae163167d73%3A0x6a617a11831aaa58!2sCandi+Barong!5e0!3m2!1sen!2sid!4v1494229767756" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
