--- a/wisata-sejarah/Keraton-Yogyakarta.html
+++ b/wisata-sejarah/Keraton-Yogyakarta.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="About our team behind Ingarta.">
+    <meta name="description" content="Kraton Kasultanan Ngayogyakarta Hadiningrat atau yang sekarang lebih dikenal dengan nama Kraton Yogyakarta merupakan pusat dari museum hidup kebudayaan Jawa yang ada di Daerah Istimewa Yogyakarta.">
     <meta name="author" content="David Rigan, Firhda Puteri Dinda, M.Lukman Hakin, Akhmad Khalid">
     <link rel="icon" href="../media/gambar/icon.ico">
 
-    <title>Candi Prambanan - Ingarta</title>
+    <title>Keraton Yogyakarta - Ingarta</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -49,11 +49,10 @@
       </div>
     </div>
 
-
     <!-- Carousel
     ================================================== -->
     <div class="container-fluid jarak-padding">
-        <h1 class="nama_tempat">Candi Prambanan</h1>
+        <h1 class="nama_tempat">Keraton Yogyakarta</h1>
         <div class="stars nama_tempat">
         <form action="">
               <input class="star star-5" id="star-5" type="radio" name="star"></input>
@@ -68,12 +67,8 @@
               <label class="star star-1" for="star-1"></label>
             </form>
         </div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sid!2sid!4v1495199739381!6m8!1m7!1s_aN7fiFQUIHjzRxK5KOQEg!2m2!1d-7.752035849755844!2d110.4915345366219!3f287.49075941745207!4f10.758040734681444!5f0.4000000000000002" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sid!4v1494234032717!6m8!1m7!1sF%3A-yHqSjSG2RNU%2FWAMIQQZml5I%2FAAAAAAAANpI%2F6Bgp6VGLz_gsChxPCfgT82e8gTG5qTNzQCLIB!2m2!1d-7.8052845!2d110.3642031!3f171.0154266321311!4f-17.546087719304694!5f0.7820865974627469" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
-
-
-
-
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
@@ -89,11 +84,10 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Se<span class="text-muted">jarah.</span></h2>
-          <p class="lead">Candi Prambanan adalah bangunan yang dibangun di abad ke-10 pada masa pemerintahan dua raja, Rakai Pikatan dan Rakai Balitung. Menjulang setinggi 47 meter, berdirinya candi ini telah memenuhi keinginan pembuatnya, menunjukkan kejayaan Hindu di tanah Jawa. Candi ini terletak 17 kilometer dari pusat kota Yogyakarta, di tengah area yang kini dibangun taman indah.
-Candi Prambanan memiliki 3 candi utama di halaman utama, yaitu Candi Wisnu, Brahma, dan Siwa. Ketiga candi tersebut adalah lambang Trimurti dalam kepercayaan Hindu. Ketiga candi itu menghadap ke timur. Setiap candi utama memiliki satu candi pendamping yang menghadap ke barat, yaitu Nandini untuk Siwa, Angsa untuk Brahma, dan Garuda untuk Wisnu. Selain itu, masih terdapat 2 candi apit, 4 candi kelir, dan 4 candi sudut. Sementara, halaman kedua memiliki 224 candi.</p>
+          <p class="lead">Keraton Kasultanan Ngayogyakarta Hadiningrat atau yang sekarang lebih dikenal dengan nama Kraton Yogyakarta merupakan pusat dari museum hidup kebudayaan Jawa yang ada di Daerah Istimewa Yogyakarta. Tidak hanya menjadi tempat tinggal raja dan keluarganya semata, Kraton juga menjadi kiblat perkembangan budaya Jawa, sekaligus penjaga nyala kebudayaan tersebut. Di tempat ini wisatawan dapat belajar dan melihat secara langsung bagaimana budaya Jawa terus hidup serta dilestarikan. Kraton Yogyakarta dibangun oleh Pangeran Mangkubumi pada tahun 1755, beberapa bulan setelah penandatanganan Perjanjian Giyanti. Dipilihnya Hutan Beringin sebagai tempat berdirinya kraton dikarenakan tanah tersebut diapit dua sungai sehingga dianggap baik dan terlindung dari kemungkinan banjir. Meski sudah berusia ratusan tahun dan sempat rusak akibat gempa besar pada tahun 1867, bangunan Kraton Yogyakarta tetap berdiri dengan kokoh dan terawat dengan baik.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/Candi-Prambanan3.jpg" alt="500x500" src="../media/gambar/Candi-Prambanan3.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/keraton1.jpg" alt="500x500" src="../media/gambar/keraton1.jpg" data-holder-rendered="true">
         </div>
       </div>
 
@@ -102,11 +96,10 @@ Candi Prambanan memiliki 3 candi utama di halaman utama, yaitu Candi Wisnu, Brah
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Ada apa saja <span class="text-muted">di sana ?</span></h2>
-          <p class="lead">Memasuki candi Siwa yang terletak di tengah dan bangunannya paling tinggi, anda akan menemui 4 buah ruangan. Satu ruangan utama berisi arca Siwa, sementara 3 ruangan yang lain masing-masing berisi arca Durga (istri Siwa), Agastya (guru Siwa), dan Ganesha (putra Siwa). Arca Durga itulah yang disebut-sebut sebagai arca Roro Jonggrang.
-Di Candi Wisnu yang terletak di sebelah utara candi Siwa, anda hanya akan menjumpai satu ruangan yang berisi arca Wisnu. Demikian juga Candi Brahma yang terletak di sebelah selatan Candi Siwa, anda juga hanya akan menemukan satu ruangan berisi arca Brahma.</p>
+          <p class="lead">Ada banyak hal yang bisa disaksikan di Keraton Yogyakarta, mulai dari aktivitas abdi dalem, melihat koleksi barang-barang Keraton. Koleksi yang disimpan dalam kotak kaca yang tersebar di berbagai ruangan tersebut mulai dari keramik dan barang pecah belah, senjata, foto, miniatur dan replika, hingga aneka jenis batik beserta deorama proses pembuatannya. Selain itu, wisatawan juga bisa menikmati pertunjukan seni dengan jadwal berbeda-beda setiap harinya. Pertunjukan tersebut mulai dari macapat, wayang golek, wayang kulit, dan tari-tarian. Untuk menikmati pertunjukkan seni wisatawan tidak perlu mengeluarkan biaya tambahan. Jika datang pada hari selasa wage, Anda bisa menyaksikan lomba jemparingan atau panahan gaya Mataraman di Kemandhungan Kidul. Jemparingan ini dilaksanakan dalam rangka tinggalan dalem Sri Sultan HB X. Keunikan dari jemparingan ini adalah setiap peserta wajib mengenakan busana tradisional Jawa dan memanah dengan posisi duduk</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/Candi-Prambanan2.jpg" alt="500x5/00" src="../media/gambar/Candi-Prambanan2.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/keraton2.jpg" alt="500x5/00" src="../media/gambar/keraton2.jpg" data-holder-rendered="true">
         </div>
       </div>
 
@@ -116,6 +109,7 @@ Di Candi Wisnu yang terletak di sebelah utara candi Siwa, anda hanya akan menjum
         <div class="col-md-7">
           <h2 class="featurette-heading">Fasilitas & <span class="text-muted">tiket masuk.</span></h2>
           <p class="lead">
+          Loket masuk berada di Tepas Keprajuritan (depan Alun-alun Utara) dan di Tepas Pariwisata (Regol Keben).
           Fasilitas berupa :
           <ul>
             <li>Penginapan & bumi perkemahan</i></li>
@@ -135,7 +129,7 @@ Di Candi Wisnu yang terletak di sebelah utara candi Siwa, anda hanya akan menjum
           </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/Candi-Prambanan1.jpg" alt="500x500" src="../media/gambar/Candi-Prambanan1.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/keraton3.jpg" alt="500x500" src="../media/gambar/keraton3.jpg" data-holder-rendered="true">
         </div>
       </div>
 
@@ -148,7 +142,7 @@ Di Candi Wisnu yang terletak di sebelah utara candi Siwa, anda hanya akan menjum
       
 
       <div class="container-fluid text-center">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.325472201611!2d110.49247691403656!3d-7.755262979049824!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5ae6e21a0947%3A0xba89e81bfbb59339!2sCandi+Prambanan!5e0!3m2!1sen!2sid!4v1494231254192" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.853976468351!2d110.36201441403713!3d-7.8052791796486005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5796db06c7ef%3A0x395271cf052b276c!2sThe+Palace+of+Yogyakarta!5e0!3m2!1sen!2sid!4v1494233919000" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
 
     <!-- Bootstrap core JavaScript
