--- a/wisata-sejarah/Malioboro.html
+++ b/wisata-sejarah/Malioboro.html
@@ -84,7 +84,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">HI<span class="text-muted">STORY.</span></h2>
+          <h2 class="featurette-heading">Se<span class="text-muted">jarah.</span></h2>
           <p class="lead">Sebelum berubah menjadi jalanan yang ramai, Malioboro hanyalah ruas jalan yang sepi dengan pohon asam tumbuh di kanan dan kirinya. Jalan ini hanya dilewati oleh masyarakat yang hendak ke Keraton atau kompleks kawasan Indische pertama di Jogja seperti Loji Besar (Benteng Vredeburg), Loji Kecil (kawasan di sebelah Gedung Agung), Loji Kebon (Gedung Agung), maupun Loji Setan. Namun keberadaan Pasar Gede atau Pasar Beringharjo di sisi selatan serta adanya permukiman etnis Tionghoa di daerah Ketandan lambat laun mendongkrak perekonomian di kawasan tersebut. Kelompok Tionghoa menjadikan Malioboro sebagai kanal bisnisnya, sehingga kawasan perdagangan yang awalnya berpusat di Beringharjo dan Pecinan akhirnya meluas ke arah utara hingga Stasiun Tugu.</p>
         </div>
         <div class="col-md-5">
@@ -105,7 +105,9 @@
         </div>
       </div>
 
-      <hr class="featurette-divider">
+      <br>
+      <br>
+      <br>
 <!--
        <div class="row featurette">
         <div class="col-md-7">
