--- a/wisata-sejarah/Museum-Merapi.html
+++ b/wisata-sejarah/Museum-Merapi.html
@@ -84,7 +84,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">HI<span class="text-muted">STORY.</span></h2>
+          <h2 class="featurette-heading">Sekilas <span class="text-muted">Museum Gunung Merapi.</span></h2>
           <p class="lead">Berdiri artistik dengan latar agungnya Gunung Merapi, museum 2 lantai yang diresmikan tahun 2010 silam ini menjadi salah satu tempat wisata menarik di daerah Hargobinangun, Sleman. Bentuk bangunannya unik, berbentuk trapesium dengan salah satu sisi puncaknya mengerucut membentuk segitiga. Ketika hari cerah dan Gunung Merapi tak tertutup awan, maka keduanya tampak begitu gagah.</p>
         </div>
         <div class="col-md-5">
@@ -97,9 +97,7 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Ada apa saja <span class="text-muted">di sana ?</span></h2>
-          <p class="lead">Menjelajahi ruangan lain kita akan menemukan display tipe letusan gunung api, batuan dari Gunung Merapi sejak tahun 1930, koleksi benda-benda sisa letusan tahun 2006 hingga koleksi foto-foto Gunung Merapi dari zaman ke zaman yang dipajang sedemikian rupa sehingga mudah diamati. Panel-panel ilustrasi dengan gambar kartun pun dapat dijumpai dan tentunya ramah bagi anak-anak.
-Memasuki  lantai dua museum, Setidaknya ada sembilan tipe benda koleksi dan alat peraga yang tersimpan di sana, mulai dari display letusan dan erupsi Merapi, lorong peraga simulasi LCD, peraga simulasi tsunami hingga peraga simulasi gempa. Masing-masing koleksi tersebut berhasil menarik perhatian tiap pengunjung, apalagi koleksi alat peraga yang ada masih berfungsi dengan baik. Jadi jangan heran bila tiap pengunjung dapat melihat tsunami dan gempa bumi mini yang dahsyat namun tak membahayakan.
-Ketika semua sisi museum telah dijelajahi, masuk ke dalam teater mini museum ini adalah pilihan yang tepat. Sembari beristirahat, pengunjung akan disuguhi sebuah film pendek berdurasi 24 menit berjudul Mahaguru Merapi. Film ini menunjukkan dua sisi Merapi yang begitu berbeda. Merapi memberi kesuburan dan kehidupan bagi tiap makhluk di sekitarnya, tapi ada kalanya ia juga meluluhlantakkan semuanya tanpa tersisa.</p>
+          <p class="lead">Di dalam ruangan, kita akan menemukan batuan dari Gunung Merapi sejak tahun 1930, koleksi benda-benda sisa letusan tahun 2006 hingga koleksi foto-foto Gunung Merapi dari zaman ke zaman yang dipajang. Memasuki  lantai 2 museum, ada banyak tipe benda koleksi dan alat peraga yang tersimpan di sana. Ketika semua sisi museum telah dijelajahi, masuk ke dalam teater mini museum ini adalah pilihan yang tepat. Sembari beristirahat, pengunjung akan disuguhi sebuah film pendek berdurasi 24 menit berjudul Mahaguru Merapi. Film ini menunjukkan dua sisi Merapi yang begitu berbeda. Merapi memberi kesuburan dan kehidupan bagi tiap makhluk di sekitarnya, tapi ada kalanya ia juga meluluhlantakkan semuanya tanpa tersisa.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block" data-src="../media/gambar/museum-gunung-merapi-2.jpg" alt="500x5/00" src="../media/gambar/museum-gunung-merapi-2.jpg" data-holder-rendered="true">
@@ -112,21 +110,14 @@ Ketika semua sisi museum telah dijelajahi, masuk ke dalam teater mini museum ini
         <div class="col-md-7">
           <h2 class="featurette-heading">Fasilitas & <span class="text-muted">tiket masuk.</span></h2>
           <p class="lead">
-          Fasilitas berupa :
-          <ul>
-            <li>Penginapan & bumi perkemahan</i></li>
-            <li>Kolam renang</li>
-            <li>Gedung pertemuan</li>
-            <li>Outbond</li>
-            <li>Lahan pembelajaran pembibitan dan pembuatan pupuk</li>
-            <li>Aneka buah dan tanaman hias</li>
-            <li>Dll</li>
-          </ul>
+          
           Tiket masuk :
           <ul>
-              <li>Buka - tutup  :   08.00 - 18.00</li>
-              <li>Biaya parkir  :   gratis</li>
-              <li>Retribusi pengunjung  :   Rp5.000</li>
+              <li>Tiket Masuk Museum  :   Rp8.000</li>
+              <li>Tiket Ketep Volcano Theatre  :   Rp7.000</li>
+              <li>Tiket Teropong  :   Rp3.000</li>
+              <li>Parkir Motor  :   Rp2.000</li>
+              <li>Parkir Mobil  :   Rp5.000</li>
           </ul>
           </p>
         </div>
@@ -137,6 +128,11 @@ Ketika semua sisi museum telah dijelajahi, masuk ke dalam teater mini museum ini
 
       </div>
       </div>
+
+      <br>
+      <br>
+      <br>
+
 
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.6219368523202!2d110.42211781403498!3d-7.616051477404628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5e6ec08af943%3A0xa843109615445506!2sMerapi+Volcano+Museum!5e0!3m2!1sen!2sid!4v1494230655310" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
