--- a/wisata-alam/Air-Terjun-Lepo.html
+++ b/wisata-alam/Air-Terjun-Lepo.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="About our team behind Ingarta.">
-    <meta name="author" content="David Rigan, Firhda Puteri Dinda, M.Lukman Hakin, Akhmad Khalid">
+    <meta name="description" content="Lepo sangat mirip dengan Erawan Falls di Erawan National Park, Thailand. Ada 4 tingkat kolam alami yang dihubungkan oleh 3 air terjun di tempat wisata yang mulai dikembangkan tahun 2013 ini.">
+    <meta name="author" content="David Rigan, Firdha Puteri Dinda, M.Lukman Hakin, Akhmad Khalid">
     <link rel="icon" href="../media/gambar/icon.ico">
 
-    <title>Nama Tempat - Ingarta</title>
+    <title>Air Terjun Lepo - Ingarta</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
-    <div class="navbar-wrapper">
+    <nav class="navbar-wrapper">
       <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -38,13 +38,230 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="facebook"><i class="fa fa-facebook-square fa-lg"></i></a></li>
-                <li><a href="#instagram"><i class="fa fa-instagram fa-lg"></i></a></li>
-                <li><a href="#"><i class="fa fa-bars fa-lg"></i></a></li>
+                <!--Link Share-->
+                <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Air-Terjun-Lepo.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+                <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
+                <div class="button">
+                  <a class="btn-open" href="#"></a>
+                </div>
               </ul>
             </div>
           </div>
+      </nav>
+
+      <!--Kategori-->
+    <div class="overlay">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Kebun-Buah-Mangunan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/mang1.jpg);">
+              <div class="desc">
+                <h2>Hutan Pinus Imogiri</h2>
+                <p>Hutan Pinus Mangunan, begitulah bagian dari hutan di kawasan RPH (Resort Pengelolaan Hutan) Mangunan yang ditumbuhi tanaman Pinus merkusii ini disebut...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Kebun-Teh-Nglinggo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/ktn1.JPG);">
+              <div class="desc">
+                <h2>Kebun Teh Nglinggo</h2>
+                <p>Sejarah Desa Wisata Nglinggo tak bisa dipisahkan dari kisah kepahlawanan Pangeran Diponegoro ketika perang melawan Belanda bersama pasukannya di Perbukitan Menoreh...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Goa-Kiskendo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/gk1.jpg);">
+              <div class="desc">
+                <h2>Goa Kiskendo</h2>
+                <p>Gua Kiskendo adalah gua alam di pegunungan Menoreh yang terletak 1200 m di atas permukaan laut.Gua Kiskendo terletak di dusun Sukamaya, Desa Jatimulyo, Kecamatan Girimulyo...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Pantai-Glagah.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/pg4.jpg);">
+              <div class="desc">
+                <h2>Pantai Glagah</h2>
+                <p>Pantai Glagah merupakan pantai primadona di Kulonprogo. Destinasi wisata ini hanya berjarak sekitar 40 km arah barat Yogyakarta, berbatasan dengan kabupaten purworejo...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Puncak-Suroloyo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/ps6.jpg);">
+              <div class="desc">
+                <h2>Puncak Suroloyo</h2>
+                <p>Puncak Suroloyo adalah puncak tertinggi di Perbukitan Menoreh, Yogyakarta. Perbukitan yang memiliki ketinggian kurang lebih 2000 meter dpl ini membentang sepanjang Yogyakarta dan Jawa Tengah...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Waduk-Sermo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/ws1.jpg);">
+              <div class="desc">
+                <h2>Waduk Sermo</h2>
+                <p>Waduk Sermo dibangun dengan tujuan untuk suplesi sistem irigasi daerah Kalibawang yang memiliki cakupan areal seluas 7.152 Ha. Bangunan pelimpah...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Candi-Barong.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Candi-Barong-1.jpg);">
+              <div class="desc">
+                <h2>Candi Barong</h2>
+                <p>Menurut sejarah, candi yang diperkirakan dibangun antara abad ke-9 dan 10 ini sebenarnya bernama Candi Suragedug. Namun, hiasan kala (sosok raksasa menyeramkan....</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Museum-Merapi.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/museum-gunung-merapi-1.jpg);">
+              <div class="desc">
+                <h2>Museum Gunung Merapi</h2>
+                <p>Berdiri artistik dengan latar agungnya Gunung Merapi, museum 2 lantai yang diresmikan tahun 2010 silam ini menjadi salah satu tempat wisata menarik di daerah...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Candi-Prambanan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Candi-Prambanan3.jpg);">
+              <div class="desc">
+                <h2>Candi Prambanan</h2>
+                <p>Candi Prambanan adalah bangunan yang dibangun di abad ke-10 pada masa pemerintahan dua raja, Rakai Pikatan dan Rakai Balitung. Menjulang setinggi 47 meter...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Goa-Japan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Goa-Jepang3.jpg);">
+              <div class="desc">
+                <h2>Goa Jepang</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum aliquid illo, repellat magnam veritatis mollitia eum itaque reiciendis esse</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Monjali.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Monjali1.jpg);">
+              <div class="desc">
+                <h2>Monjali</h2>
+                <p>Museum Monumen Yogya Kembali, adalah sebuah museum sejarah perjuangan kemerdekaan Republik Indonesia yang ada di kota Yogyakarta dan dikelola oleh Departemen Kebudayaan dan Pariwisata...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Keraton-Yogyakarta.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/keraton1.jpg);">
+              <div class="desc">
+                <h2>Keraton Yogyakarta</h2>
+                <p>Kraton Kasultanan Ngayogyakarta Hadiningrat atau yang sekarang lebih dikenal dengan nama Kraton Yogyakarta merupakan pusat dari museum hidup kebudayaan Jawa yang ada di Daerah Istimewa Yogyakarta...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-sejarah/Malioboro.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/malio1.jpg);">
+              <div class="desc">
+                <h2>Malioboro</h2>
+                <p>Sebelum berubah menjadi jalanan yang ramai, Malioboro hanyalah ruas jalan yang sepi dengan pohon asam tumbuh di kanan dan kirinya. Jalan ini hanya dilewati oleh masyarakat...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-budaya/Kebun-Binatang-Gembira-Loka.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/zoo1.jpg);">
+              <div class="desc">
+                <h2>Gembira Loka Zoo</h2>
+                <p>Kebun binatang yang berdiri sejak puluhan tahun lalu ini rupanya memiliki belasan koleksi komodo yang tersebar di beberapa kandang. Bahkan, pada periode tahun 1992 hingga 1996...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="ingarta.id/wisata-sejarah/Taman-Pintar.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/taman1.jpg);">
+              <div class="desc">
+                <h2>Taman Pintar</h2>
+                <p>Taman Pintar adalah wahana wisata yang terdapat di pusat Kota Yogyakarta, tepatnya di Jalan Panembahan Senopati No. 1-3, Yogyakarta, di kawasan Benteng Vredeburg...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Puncak-Kasakora.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/puncak-kosakora1.jpg);">
+              <div class="desc">
+                <h2>Puncak Kasakora</h2>
+                <p>Puncak Kosakora adalah hasil fenomena eksokarst lain di Gunungkidul. Sebuah bukit karst yang berada dalam satu garis dengan deretan pantai-pantai cantik Gunungkidul...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Pantai-Ndrini.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/pantai-drini1.jpg);">
+              <div class="desc">
+                <h2>Pantai Ndrini</h2>
+                <p>Pantai Drini menjadi salah satu pantai istimewa di pesisir Gunungkidul karena sebuah pulau kecil di tengahnya, membagi pantai menjadi dua bagian...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Gunung-Nglanggeran.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/Nglanggeran1.jpg);">
+              <div class="desc">
+                <h2>Pantai Nglanggeran</h2>
+                <p>Hanya memakan waktu 1 hingga 1,5 jam pendakian, Anda akan tiba di puncak barat Gunung Nglanggeran, Gunung Gede. Pemandangan indah yang memanjakan mata pun menyambut...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Goa-Rancang-Kencono.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/goark1.jpg);">
+              <div class="desc">
+                <h2>Goa Rancang Kencono</h2>
+                <p>Gua Rancang Kencono yang terletak di Desa Wisata Bleberan. Untuk memasuki Gua Rancang Kencono cukup menuruni tangga batu yang sudah dibangun sejak dulu...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Embung-Batara-Sriten.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/embung1.jpg);">
+              <div class="desc">
+                <h2>Embung Batara Sinten</h2>
+                <p>Jalanan menanjak dan berliku-liku menuju Pegunungan Baturagung Utara membuat tak henti-hentinya menahan nafas tegang. Berlanjut dengan jalanan berbatu kapur kurang lebih...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Air-Terjun-Lepo.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/lepo1.jpg);">
+              <div class="desc">
+                <h2>Air Terjun Lepo</h2>
+                <p>Air Terjun Lepo memiliki kolam alami yang masing-masing memiliki kedalaman yang beragam. Kolam pertama yang kami lihat ketika sampai tempat wisata ini kedalamannya mencapai 2 meter...</p>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Hutan-Pinus-Mangunan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/pinus1.jpg);">
+              <div class="desc">
+                <h2>Hutan Pinus Mangunan</h2>
+                <p>Hutan Pinus Mangunan, begitulah sebutan untuk bagian dari hutan di kawasan RPH (Resort Pengelolaan Hutan) Mangunan yang ditumbuhi tanaman Pinus merkusi. Lokasinya...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Pantai-Parangtritis.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/parang1.jpg);">
+              <div class="desc">
+                <h2>Pantai Parangtritis</h2>
+                <p>Pantai Parangtritis terletak 27 km selatan Kota Jogja dan mudah dicapai dengan transportasi umum yang beroperasi hingga pukul 17.00 maupun kendaraan pribadi...</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-4 category">
+            <a href="http://ingarta.id/wisata-alam/Sendang-Ngembel.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/sendang1.jpg);">
+              <div class="desc">
+                <h2>Sendang Ngembel</h2>
+                <p>Sendang Ngembel secara administratif terletak di Dusun Beji Wetan, Desa Sendangsari, Kec. Pajangan, Kabupaten Bantul. Obyek wisata ini tergolong kecil dan tidak terlalu luas...</p>
+              </div>
+            </a>
+          </div>
+        </div>
       </div>
+    </div><!--END Kategori-->
 
     <!-- Carousel
     ================================================== -->
@@ -80,8 +297,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Se<span class="text-muted">jarah</span></h2>
-          <p class="lead">Sekilas Lepo sangat mirip dengan Erawan Falls di Erawan National Park, Thailand. Ada 4 tingkat kolam alami yang dihubungkan oleh 3 air terjun di tempat wisata yang mulai dikembangkan tahun 2013 ini.</p>
+          <h2 class="featurette-heading">Sekilas<span class="text-muted"> Air Terjun Lepo</span></h2>
+          <p class="lead">Lepo sangat mirip dengan Erawan Falls di Erawan National Park, Thailand. Ada 4 tingkat kolam alami yang dihubungkan oleh 3 air terjun di tempat wisata yang mulai dikembangkan tahun 2013 ini.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" data-src="../media/gambar/lepo1.jpg" alt="500x500" src="../media/gambar/lepo1.jpg" data-holder-rendered="true">
@@ -93,7 +310,7 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Ada apa saja <span class="text-muted">di sana ?</span></h2>
-          <p class="lead">Masing-masing kolam alami memiliki kedalaman yang beragam. Kolam pertama yang kami lihat ketika sampai tempat wisata ini kedalamannya mencapai 2 meter. Kolam kedua yang paling luas ini kedalamannya hanya sebatas pinggang orang dewasa, sehingga lebih aman jika anak-anak bermain air di kolam ini. Tingkat ketiga adalah kolam yang paling dangkal, hingga bagian dasarnya yang tertutup endapan kapur pun terlihat dari permukaan air.
+          <p class="lead">Air Terjun Lepo memiliki kolam alami yang masing-masing memiliki kedalaman yang beragam. Kolam pertama yang kami lihat ketika sampai tempat wisata ini kedalamannya mencapai 2 meter. Kolam kedua yang paling luas ini kedalamannya hanya sebatas pinggang orang dewasa, sehingga lebih aman jika anak-anak bermain air di kolam ini. Tingkat ketiga adalah kolam yang paling dangkal, hingga bagian dasarnya yang tertutup endapan kapur pun terlihat dari permukaan air.
           </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
@@ -123,6 +340,11 @@
       </div>
       </div>
 
+      <br>
+      <br>
+      <br>
+      
+
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3951.476398520492!2d110.4719651!3d-7.9496209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a53283fbf95b3%3A0x45ee4fcd94cfd6f9!2sGrojogan+LEPO+Dlingo!5e0!3m2!1sid!2sid!4v1494129832411" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
@@ -132,5 +354,19 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+    <!--Fungsi buat togel menu-->
+    <script type="text/javascript">
+        $(document).ready(function(){
+          $(".button a").click(function(){
+              $(".overlay").fadeToggle(200);
+             $(this).toggleClass('btn-open').toggleClass('btn-close');
+          });
+        });
+        $('.overlay').on('click', function(){
+          $(".overlay").fadeToggle(200);
+          $(".button a").toggleClass('btn-open').toggleClass('btn-close');
+          open = false;
+        });
+    </script>
   </body>
 </html>
