--- a/wisata-alam/Puncak-Kasakora.html
+++ b/wisata-alam/Puncak-Kasakora.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Memasuki Goa Kiskendo, anda akan disambut dengan keindahan batuan stalaktit dan stalagmite. Goa kiskendo merupakan komplek objek wisata, didalam komplek ini terdapat 15 ruangan dengan berbagai mitos yang berkembang didalamanya.">
+    <meta name="description" content="Puncak Kosakora adalah hasil fenomena eksokarst lain di Gunungkidul. Sebuah bukit karst yang berada dalam satu garis dengan deretan pantai-pantai cantik Gunungkidul.">
     <meta name="author" content="David Rigan, Firdha Puteri Dinda, M.Lukman Hakin, Akhmad Khalid">
     <link rel="icon" href="../media/gambar/icon.ico">
 
-    <title>Goa Kiskendo - Ingarta</title>
+    <title>Puncak Kasakora - Ingarta</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -39,14 +39,12 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                
                 <!--Link Share-->
-                <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Goa-Kiskendo.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+                <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Puncak-Kasakora.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
                 <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
                 <div class="button">
                   <a class="btn-open" href="#"></a>
                 </div>
-
               </ul>
             </div>
           </div>
@@ -271,67 +269,28 @@
 
     <!-- Carousel
     ================================================== -->
-     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-caption">
-
-        <!-- Judul Carousel -->
-          <h1>Goa Kiskendo</h1>
-          <div class="stars">
-          <form action="">
-            <input class="star star-5" id="star-5" type="radio" name="star"></input>
-            <label class="star star-5" for="star-5"></label>
-            <input class="star star-4" id="star-4" type="radio" name="star"></input>
-            <label class="star star-4" for="star-4"></label>
-            <input class="star star-3" id="star-3" type="radio" name="star"></input>
-            <label class="star star-3" for="star-3"></label>
-            <input class="star star-2" id="star-2" type="radio" name="star"></input>
-            <label class="star star-2" for="star-2"></label>
-            <input class="star star-1" id="star-1" type="radio" name="star"></input>
-            <label class="star star-1" for="star-1"></label>
-          </form>
-          </div>
+    <div class="container-fluid jarak-padding">
+        <h1 class="nama_tempat">Puncak Kosakora</h1>
+        <div class="stars nama_tempat">
+        <form action="">
+              <input class="star star-5" id="star-5" type="radio" name="star"></input>
+              <label class="star star-5" for="star-5"></label>
+              <input class="star star-4" id="star-4" type="radio" name="star"></input>
+              <label class="star star-4" for="star-4"></label>
+              <input class="star star-3" id="star-3" type="radio" name="star"></input>
+              <label class="star star-3" for="star-3"></label>
+              <input class="star star-2" id="star-2" type="radio" name="star"></input>
+              <label class="star star-2" for="star-2"></label>
+              <input class="star star-1" id="star-1" type="radio" name="star"></input>
+              <label class="star star-1" for="star-1"></label>
+            </form>
         </div>
-        <div class="item active">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m0!3m2!1sen!2sid!4v1495208298697!6m8!1m7!1sF%3A-Ej7PULgHmgM%2FWF4YIuZ1TnI%2FAAAAAAAAFDg%2FG8H44I0XLX0Bh7ZKTjdqiWOYP3MoWAb4ACLIB!2m2!1d-8.1410732!2d110.5840518!3f304!4f0!5f0.7820865974627469" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
 
-        <!-- Gambar slide 1 -->
-          <img class="first-slide" src="../media/gambar/gk4.jpg" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption"></div>
-          </div>
-        </div>
-        <div class="item">
 
-        <!-- Gambar slide 2 -->
-          <img class="second-slide" src="../media/gambar/gk5.jpg" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption"></div>
-          </div>
-        </div>
-        <div class="item">
+   
 
-        <!-- Gambar slide 3 -->
-          <img class="third-slide" src="../media/gambar/gk3.jpg" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption"></div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div><!-- /.carousel -->
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
@@ -346,11 +305,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Se<span class="text-muted">jarah.</span></h2>
-          <p class="lead">Gua Kiskendo adalah gua alam di pegunungan Menoreh yang terletak 1200 m di atas permukaan laut.Gua Kiskendo terletak di dusun Sukamaya, Desa Jatimulyo, Kecamatan Girimulyo, Kabupaten Kulon Progo Yogyakarta, 35 km Barat Laut dari arah Yogyakarta. Banyak mitos yang masih begitu besar tentang goa Kiskendo yang diyakini warga setempat sebagai tempat keramat. Sejarahnya pada jaman dahulu kala gua ini merupakan kerajaan yang dipimpin oleh rajanya yang bernama Mahesosuro dan Lembusuro yang menurut legenda manusia berkepala kerbau dan sapi.</p>
+          <h2 class="featurette-heading">HI<span class="text-muted">STORY.</span></h2>
+          <p class="lead">Puncak Kosakora adalah hasil fenomena eksokarst lain di Gunungkidul. Sebuah bukit karst yang berada dalam satu garis dengan deretan pantai-pantai cantik Gunungkidul. Pantai Ngrumput, Pantai Drini, Pantai Watu Kodok, Pantai Sepanjang, Pantai Kukup bahkan Mercusuar Pantai Baron yang jauh di barat pun dapat terlihat dari bukit yang berketinggian sekitar 50 mdpl ini. Bukit yang dulunya sunyi itu, kini menjadi buah bibir banyak orang yang ingin menikmati keindahan panoramanya atau sekedar ingin selfie dengan background landscape pantai selatan dari ketinggian, seolah selfie di savana Kenawa.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/gk1.jpg" alt="500x500" src="../media/gambar/gk1.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/puncak-kosakora1.jpg" alt="500x500" src="../media/gambar/puncak-kosakora1.jpg" data-holder-rendered="true">
         </div>
       </div>
 
@@ -359,10 +318,12 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Ada apa saja <span class="text-muted">di sana ?</span></h2>
-          <p class="lead">Memasuki Goa Kiskendo, anda akan disambut dengan keindahan batuan stalaktit dan stalagmite. Goa kiskendo merupakan komplek objek wisata, didalam komplek ini terdapat 15 ruangan dengan berbagai mitos yang berkembang didalamanya, mulai dari Lidah Mahesosuro, Pertapaan, Pertapaan santri, Pertapaan Subali yaitu , Sumelong , Lumbuk kampek ,Selumbung, Babat Kendel, Sawaha, dll. Anda bisa melihat alur cerita tentang Gua Kiskendo yang disangkutpautkan dengan kisah Perwayangan Ramayana yang diukir dalam relief didepan mulut goa. Rute-rute umum di gua kiskendo sudah dilengkapi dengan alat penerangan dan alas yang sudah disemen sehingga mempermudah wisatawan untuk menikmati keindahan dalam goa. Untuk para pecinta susur goa, di dalam Goa Kiskendo ada rute panjang sekitar 1,5km untuk melakukan susur gua, pada area ini masih sangat alami tanpa penerangan dan alas ditutup semen.</p>
+          <p class="lead">Jika ingin berkunjung ke Puncak Kosakora, kami sarankan datang di pagi atau sore hari, saat sinar matahari tak begitu menyengat. Atau, jika ingin menikmati keindahan sunset dan sunrise bisa juga camping di Puncak Kosakora. Di tempat ini telah tersedia persewaan tenda dome untuk menginap tanpa harus membawa sendiri dari rumah. Cukup mengeluarkan uang Rp 60.000 untuk tenda kecil atau Rp 100.000 untuk tenda besar. Cara menuju ke sana:
+dari Jogja - Piyungan - Patuk - Sambipitu - Lanud TNI Gading - Siyono - Bundaran Tugu BPD lurus ke timur - Wonosari - Jalan Baron - Tanjungsari - Pos Retribusi Kawasan Pantai Gunungkidul - mengikuti jalan ke arah Pantai Drini - Puncak Kosakora
+</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/gk2.jpg" alt="500x5/00" src="../media/gambar/gk2.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/puncak-kosakora2.jpg" alt="500x5/00" src="../media/gambar/puncak-kosakora2.jpg" data-holder-rendered="true">
         </div>
       </div>
 
@@ -374,36 +335,43 @@
           <p class="lead">
           Fasilitas berupa :
           <ul>
-            <li>Joglo sebagai temoat untuk beristirahat</i></li>
-            <li>Area bermain</li>
-            <li>Bumi perkemahan</li>
-            <li>Gardu pandang</li>
-            <li>Area luas dengan kebersihan yang baik</li>
+            <li>Penginapan & bumi perkemahan</i></li>
+            <li>Kolam renang</li>
+            <li>Gedung pertemuan</li>
+            <li>Outbond</li>
+            <li>Lahan pembelajaran pembibitan dan pembuatan pupuk</li>
+            <li>Aneka buah dan tanaman hias</li>
+            <li>Dll</li>
           </ul>
-          Tiket masuk :   Rp.3.000
+          Tiket masuk :
+          <ul>
+              <li>Buka - tutup  :   08.00 - 18.00</li>
+              <li>Biaya parkir  :   gratis</li>
+              <li>Retribusi pengunjung  :   Rp5.000</li>
+          </ul>
           </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/gk6.jpg" alt="500x500" src="../media/gambar/gk6.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/puncak-kosakora3.jpg" alt="500x500" src="../media/gambar/puncak-kosakora3.jpg" data-holder-rendered="true">
         </div>
       </div>
 
-      </div>
-      </div>
 
-      <br>
-      <br>
-      <br>
+      
+      </div>
+      </div>
 
       <div class="container-fluid text-center">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.4037305095035!2d110.1286831147778!3d-7.746930294416375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7aee228c144b17%3A0xe7f34278b5d95d90!2sGoa+Kiskendo!5e0!3m2!1sid!2sid!4v1494254938890" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3951.5649668036413!2d110.4224126!3d-7.9404192!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5366aaaaaaab%3A0x51f99091957cadfa!2sMangunan+Fruit+Garden!5e0!3m2!1sid!2sid!4v1493623171529" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>            
       </div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+    <!--Fungsi buat togel menu-->
     <script type="text/javascript">
         $(document).ready(function(){
           $(".button a").click(function(){
@@ -417,6 +385,5 @@
           open = false;
         });
     </script>
-
   </body>
 </html>
