--- a/wisata-sejarah/Goa-Japan.html
+++ b/wisata-sejarah/Goa-Japan.html
@@ -9,7 +9,7 @@
     <meta name="author" content="David Rigan, Firhda Puteri Dinda, M.Lukman Hakin, Akhmad Khalid">
     <link rel="icon" href="../media/gambar/icon.ico">
 
-    <title>Goa Japan - Ingarta</title>
+    <title>Goa Jepang - Ingarta</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -53,7 +53,7 @@
     <!-- Carousel
     ================================================== -->
     <div class="container-fluid jarak-padding">
-        <h1 class="nama_tempat">Goa Jepang Sleman</h1>
+        <h1 class="nama_tempat">Goa Jepang</h1>
         <div class="stars nama_tempat">
         <form action="">
               <input class="star star-5" id="star-5" type="radio" name="star"></input>
@@ -84,9 +84,9 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">HI<span class="text-muted">STORY.</span></h2>
-          <p class="lead">Berdiri artistik dengan latar agungnya Gunung Merapi, museum 2 lantai yang diresmikan tahun 2010 silam ini menjadi salah satu tempat wisata menarik di daerah Hargobinangun, Sleman. Bentuk bangunannya unik, berbentuk trapesium dengan salah satu sisi puncaknya mengerucut membentuk segitiga. Ketika hari cerah dan Gunung Merapi tak tertutup awan, maka keduanya tampak begitu gagah.
-Menjelajahi ruangan lain kita akan menemukan display tipe letusan gunung api, batuan dari Gunung Merapi sejak tahun 1930, koleksi benda-benda sisa letusan tahun 2006 hingga koleksi foto-foto Gunung Merapi dari zaman ke zaman yang dipajang sedemikian rupa sehingga mudah diamati. Panel-panel ilustrasi dengan gambar kartun pun dapat dijumpai dan tentunya ramah bagi anak-anak.</p>
+          <h2 class="featurette-heading">Sekilas <span class="text-muted">Goa Jepang.</span></h2>
+          <p class="lead">Goa Peninggalan Jepang ini berada di dalanm wisata alam Nirmolo Kaliurang yang berada di lereng Gunung Merapi. Goa peninggalan Jepang ini terlihat sangat eksotis. Letaknya yang berada di pegunungan membuat udara di tempat ini terasa sangat sejuk. Apalagi, pengunjung dapat melihat kawanan monyet di habitat alaminya.
+          </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" data-src="../media/gambar/Goa-Jepang1.jpg" alt="500x500" src="../media/gambar/Goa-Jepang1.jpg" data-holder-rendered="true">
@@ -98,8 +98,7 @@ Menjelajahi ruangan lain kita akan menemukan display tipe letusan gunung api, ba
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Ada apa saja <span class="text-muted">di sana ?</span></h2>
-          <p class="lead">Memasuki  lantai dua museum, Setidaknya ada sembilan tipe benda koleksi dan alat peraga yang tersimpan di sana, mulai dari display letusan dan erupsi Merapi, lorong peraga simulasi LCD, peraga simulasi tsunami hingga peraga simulasi gempa. Masing-masing koleksi tersebut berhasil menarik perhatian tiap pengunjung, apalagi koleksi alat peraga yang ada masih berfungsi dengan baik. Jadi jangan heran bila tiap pengunjung dapat melihat tsunami dan gempa bumi mini yang dahsyat namun tak membahayakan.
-Ketika semua sisi museum telah dijelajahi, masuk ke dalam teater mini museum ini adalah pilihan yang tepat. Sembari beristirahat, pengunjung akan disuguhi sebuah film pendek berdurasi 24 menit berjudul Mahaguru Merapi. Film ini menunjukkan dua sisi Merapi yang begitu berbeda. Merapi memberi kesuburan dan kehidupan bagi tiap makhluk di sekitarnya, tapi ada kalanya ia juga meluluhlantakkan semuanya tanpa tersisa.</p>
+          <p class="lead">Goa Jepang yang berada di Kaliurang berjumlah 25 unit. Goa-goa tersebut saling berhubungan satu sama lain, masih orisinal, dan tanpa penerangan. Di depan pintu masuk goa pertama, terdapat pemandu yang siap menemani dan menjelaskan berbagai hal tentang goa ini. Dengan biaya yang relatif terjangkau, pengunjung dapat menyewa fasilitas penerangan sekaligus ditemani seorang pemandu. Pengunjung akan mendapatkan dua manfaat sekaligus jika berkunjung ke kompleks wisata ini. Selain dapat menikmati wisata alam, pengunjung juga diperkaya dengan pengetahuan sejarah penjajahan Jepang di Indonesia. </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block" data-src="../media/gambar/Goa-Jepang2.jpg" alt="500x5/00" src="../media/gambar/Goa-Jepang2.jpg" data-holder-rendered="true">
@@ -114,19 +113,13 @@ Ketika semua sisi museum telah dijelajahi, masuk ke dalam teater mini museum ini
           <p class="lead">
           Fasilitas berupa :
           <ul>
-            <li>Penginapan & bumi perkemahan</i></li>
-            <li>Kolam renang</li>
-            <li>Gedung pertemuan</li>
-            <li>Outbond</li>
-            <li>Lahan pembelajaran pembibitan dan pembuatan pupuk</li>
-            <li>Aneka buah dan tanaman hias</li>
-            <li>Dll</li>
+            <li>Pemandu</i></li>
+            <li>Kamar Mandi/WC</li>
           </ul>
           Tiket masuk :
           <ul>
-              <li>Buka - tutup  :   08.00 - 18.00</li>
-              <li>Biaya parkir  :   gratis</li>
-              <li>Retribusi pengunjung  :   Rp5.000</li>
+              <li>Tiket Masuk   :   Rp2.000</li>
+              <li>Jam Operasi   :   08.00 - 16.00</li>
           </ul>
           </p>
         </div>
@@ -137,6 +130,11 @@ Ketika semua sisi museum telah dijelajahi, masuk ke dalam teater mini museum ini
 
       </div>
       </div>
+
+      <br>
+      <br>
+      <br>
+      
 
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.8804634641824!2d110.42834351403471!3d-7.587987877076793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a672b2c1ec46d%3A0xb868338e332a9872!2sGoa+Jepang!5e0!3m2!1sen!2sid!4v1494232234679" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
