--- a/wisata-sejarah/Monjali.html
+++ b/wisata-sejarah/Monjali.html
@@ -83,9 +83,9 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">HI<span class="text-muted">STORY.</span></h2>
-          <p class="lead">Museum Monumen Yogya Kembali, adalah sebuah museum sejarah perjuangan kemerdekaan Republik Indonesia yang ada di kota Yogyakarta dan dikelola oleh Departemen Kebudayaan dan Pariwisata. Museum yang berada di bagian utara kota ini banyak dikunjungi oleh para pelajar dalam acara darmawisata.
-Museum Monumen dengan bentuk kerucut ini terdiri dari 3 lantai dan dilengkapi dengan ruang perpustakaan serta ruang serbaguna. Pada rana pintu masuk dituliskan sejumlah 422 nama pahlawan yang gugur di daerah Wehrkreise III (RIS) antara tanggal 19 Desember 1948 sampai dengan 29 Juni 1949. Dalam 4 ruang museum di lantai 1 terdapat benda-benda koleksi: realia, replika, foto, dokumen, heraldika, berbagai jenis senjata, bentuk evokatif dapur umum dalam suasana perang kemerdekaan 1945-1949. Tandu dan dokar (kereta kuda) yang pernah dipergunakan oleh Panglima Besar Jenderal Soedirman juga disimpan di sini (di ruang museum nomor 2).</p>
+          <h2 class="featurette-heading">Se<span class="text-muted">jarah.</span></h2>
+          <p class="lead">Monumen Yogya Kembali dibangun pada tanggal 29 Juni 1985 dengan upacara tradisional penanaman kepala kerbau dan peletakan batu pertama oleh Sri Sultan Hamengkubuwono IX dan Sri Paduka Paku Alam VIII. Gagasan untuk mendirikan monumen ini dilontarkan oleh kolonel Soegiarto. Nama Yogya Kembali dipilih dengan maksud sebagai peringatan dari peristiwa sejarah ditariknya tentara pendudukan Belanda dari ibukota RI Yogyakarta pada waktu itu, tanggal 29 Juni 1949. Hal ini merupakan tanda awal bebasnya bangsa Indonesia dari kekuasaan pemerintahan Belanda.
+         </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" data-src="../media/gambar/Monjali1.jpg" alt="500x500" src="../media/gambar/Monjali1.jpg" data-holder-rendered="true">
@@ -97,8 +97,7 @@ Museum Monumen dengan bentuk kerucut ini terdiri dari 3 lantai dan dilengkapi de
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Ada apa saja <span class="text-muted">di sana ?</span></h2>
-          <p class="lead">Monumen Yogya Kembali dibangun pada tanggal 29 Juni 1985 dengan upacara tradisional penanaman kepala kerbau dan peletakan batu pertama oleh Sri Sultan Hamengkubuwono IX dan Sri Paduka Paku Alam VIII. Gagasan untuk mendirikan monumen ini dilontarkan oleh kolonel Soegiarto, selaku walikotamadya Yogyakarta pada tahun 1983. Nama Yogya Kembali dipilih dengan maksud sebagai tetenger (peringatan) dari peristiwa sejarah ditariknya tentara pendudukan Belanda dari ibukota RI Yogyakarta pada waktu itu, tanggal 29 Juni 1949. Hal ini merupakan tanda awal bebasnya bangsa Indonesia dari kekuasaan pemerintahan Belanda.
-Pembangunan monumen ini dilakukan dengan memperhitungkan beberapa faktor penting. Titik pusat bangunan ini merupakan sebuah titik yang secara imajiner menghubungkan beberapa titik penting di Yogyakarta yaitu Kraton Jogja, Tugu Yogyakarta, Gunung Merapi, Parang Tritis dan juga Panggung Krapyak. Titik ini sendiri disebut sebagai Sumbu Besar Kehidupan dan penanda dari titik imajiner ini sendiri berada pada lantai 3 bangunan monumen ini.</p>
+          <p class="lead"> Museum Monumen Yogya Kembali adalah sebuah museum sejarah perjuangan kemerdekaan Republik Indonesia yang ada di kota Yogyakarta dan dikelola oleh Departemen Kebudayaan dan Pariwisata. Museum Monumen dengan bentuk kerucut ini terdiri dari 3 lantai dan dilengkapi dengan ruang perpustakaan serta ruang serbaguna. Pada rana pintu masuk dituliskan sejumlah 422 nama pahlawan yang gugur di daerah Wehrkreise III (RIS) antara tanggal 19 Desember 1948 sampai dengan 29 Juni 1949. Dalam 4 ruang museum di lantai 1 terdapat benda-benda koleksi: realia, replika, foto, dokumen, heraldika, berbagai jenis senjata, bentuk evokatif dapur umum dalam suasana perang kemerdekaan 1945-1949. Tandu dan dokar (kereta kuda) yang pernah dipergunakan oleh Panglima Besar Jenderal Soedirman juga disimpan di sini (di ruang museum nomor 2).</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block" data-src="../media/gambar/Monjali2.jpg" alt="500x5/00" src="../media/gambar/Monjali2.jpg" data-holder-rendered="true">
@@ -111,21 +110,11 @@ Pembangunan monumen ini dilakukan dengan memperhitungkan beberapa faktor penting
         <div class="col-md-7">
           <h2 class="featurette-heading">Fasilitas & <span class="text-muted">tiket masuk.</span></h2>
           <p class="lead">
-          Fasilitas berupa :
-          <ul>
-            <li>Penginapan & bumi perkemahan</i></li>
-            <li>Kolam renang</li>
-            <li>Gedung pertemuan</li>
-            <li>Outbond</li>
-            <li>Lahan pembelajaran pembibitan dan pembuatan pupuk</li>
-            <li>Aneka buah dan tanaman hias</li>
-            <li>Dll</li>
-          </ul>
+          
           Tiket masuk :
           <ul>
-              <li>Buka - tutup  :   08.00 - 18.00</li>
-              <li>Biaya parkir  :   gratis</li>
-              <li>Retribusi pengunjung  :   Rp5.000</li>
+              <li>Jam Operasi   :   17.00 - 23.00</li>
+              <li>Biaya masuk   :   Rp10.000 (Senin-Kamis) & Rp15.000 (Jumat-Minggu/Libur)</li>
           </ul>
           </p>
         </div>
@@ -136,6 +125,11 @@ Pembangunan monumen ini dilakukan dengan memperhitungkan beberapa faktor penting
 
       </div>
       </div>
+
+      <br>
+      <br>
+      <br>
+
 
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.378806571173!2d110.36741811403648!3d-7.749585078982102!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a58f99013c989%3A0x2a96db25b8ff4333!2sMonumen+Yogya+Kembali!5e0!3m2!1sen!2sid!4v1494233218484" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
