--- a/wisata-sejarah/Taman-Pintar.html
+++ b/wisata-sejarah/Taman-Pintar.html
@@ -127,7 +127,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Se<span class="text-muted">jarah.</span></h2>
+          <h2 class="featurette-heading">Sekilas <span class="text-muted">Taman Pintar.</span></h2>
           <p class="lead">Taman Pintar adalah wahana wisata yang terdapat di pusat Kota Yogyakarta, tepatnya di Jalan Panembahan Senopati No. 1-3, Yogyakarta, di kawasan Benteng Vredeburg. Taman ini memadukan tempat wisata rekreasi maupun edukasi dalam satu lokasi. Taman Pintar memiliki arena bermain sekaligus sarana edukasi yang terbagi dalam beberapa zona. Akses langsung kepada pusat buku eks Shopping Centre juga menambah nilai lebih Taman Pintar. Tempat rekreasi ini sangat baik untuk anak-anak pada masa perkembangan.</p>
         </div>
         <div class="col-md-5">
@@ -157,7 +157,7 @@
           </ul></p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/taman5.jpg" alt="500x5/00" src="../media/gambar/taman5.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/taman6.jpg" alt="500x5/00" src="../media/gambar/taman6.jpg" data-holder-rendered="true">
         </div>
       </div>
 
@@ -179,14 +179,16 @@
           </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/taman6.jpg" alt="500x500" src="../media/gambar/taman6.jpg" data-holder-rendered="true">
+          <img class="featurette-image img-responsive center-block" data-src="../media/gambar/taman5.jpg" alt="500x500" src="../media/gambar/taman5.jpg" data-holder-rendered="true">
         </div>
       </div>
 
       </div>
       </div>
 
-      <hr class="featurette-divider">
+      <br>
+      <br>
+      <br>
 
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.892700168103!2d110.3673500413908!3d-7.801183387492142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a57860f2fb9af%3A0xa9f6007074b62dd8!2sTaman+Pintar+Yogyakarta!5e0!3m2!1sid!2sid!4v1495255380653" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
